# nomina

./: .gitignore  README.md  README.txt  pyproject.toml  requirements.txt  setup.py
nomina.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: load-pypi.py  main.py
src/cli/: make_parser.py
src/formatting/: search_output.py
src/nomina/: main.py  nomina_cli.py
src/nomina/cli/: make_parser.py
src/nomina/search/: abstract_base_classes.py  main.py  search_pypi.py
src/search/: search_pypi.py
tests/: test_cli.py  test_search.py  test_search_pypi.py
