[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
nomina = 'src.main:main'


[project]
name = "nomina"
version = "0.0.1"
authors = [
  { name="Andy Shahidehpour", email="anshahidehpour@gmail.com" },
]
description = "A package for generating Python package names."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
